fix: textReaderInteraction: figure renderer for image wrap

--- a/views/js/pciCreator/ims/textReaderInteraction/creator/scss/textReaderInteraction.scss
+++ b/views/js/pciCreator/ims/textReaderInteraction/creator/scss/textReaderInteraction.scss
@@ -8,6 +8,13 @@
         .tr-page {
             overflow-y: visible;
         }
+
+        /* cleanup after figure/image wrap-left/wrap-right */
+        .container-editor:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
     }
 }
 
